--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,18 @@
 
 
 /*Common CSS*/
-/* *{
+
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-} */
-*,
-::after,
-::before{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+body{
+    background-color: #F0F2F5;
+}
+html{
+    scroll-behavior: smooth;
 }
 ul li{
     list-style: none;
@@ -20,16 +21,110 @@ a{
     text-decoration: none;
 }
 
+/* Header Style */
+
 header{
-    width: 100%;
-    height: 60px;
+    max-width: 100%;
+    height: 56px;
     background-color: #ffffff;
 }
-
-.logo-area{}
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 16px;
+}
+.logo-search{
+    display: flex;
+    align-items: center;
+    padding: 6px 0;
+    gap: 8px;
+}
+.logo-search div:last-child{
+    display: none;
+}
 .logo{}
 .logo{}
 .logo img{
     width: 40px;
     height: 40px;
+}
+
+.search{
+    display: flex;
+    align-items: center;
+    background: #f0f2f5;
+    border-radius: 25px;
+    width: 240px;
+    height: 40px;
+}
+.search span{
+    font-size: 19px;
+    color: #797b7f;
+    font-weight: 600;
+    padding-left: 9px;
+}
+.search input{
+    border:none ;
+    outline: none;
+    background: transparent;
+    padding: 7px 8px 9px;
+    font-size: 16px;
+}
+
+/* Navigation Menu Style */
+.nav{}
+.nav ul{
+    display: flex;
+    gap: 6px;
+}
+
+.nav ul li{
+    padding: 7px 40px;
+}
+.nav ul li:hover{
+    background-color: #f0f2f5;
+    border-radius: 5px;
+}
+.nav ul li a span{
+    font-size: 30px;
+    color: #797b7f;
+}
+.menu-bar{
+    display: none;
+}
+
+/* User Area style */
+.user-area{}
+.user-area ul{
+    display: flex;
+    gap: 8px;
+}
+.user-area ul li{
+    width: 40px;
+    height: 40px;
+    background-color: #f0f2f5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.user-area ul li:hover{
+    cursor: pointer;
+    /* transform: scale(1.1); */
+    background-color: #D8DADF;
+}
+.user-area ul li span{
+    color: #050505;
+    font-weight: bold;
+    font-size: 26px;
+}
+.user-area ul li img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+#add_icon{
+    display: none;
 }
