Adding style of left & right side

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -34,11 +34,17 @@
         align-items: center;
         justify-content: center;
     }
+    .left-side{
+        display: none;
+    }
   }
 
-  @media only screen and (max-width: 992px){
+  @media only screen and (max-width: 900px){
     .nav ul li{
         padding: 7px 20px;
+    }
+    .right-side{
+        display: none;
     }
   }
 
