--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ header{
     height: 56px;
     background-color: #ffffff;
     position: fixed;
+    z-index: 100;
 }
 .header{
     display: flex;
@@ -214,7 +215,7 @@ main {
 }
 
 .footer-link{
-    padding: 16px;
+    padding: 10px 16px 16px 16px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -250,12 +251,15 @@ main {
 .middle-section{
     flex-grow: 1;
     height: 100vh;
-    margin-top: 75px;
     padding: 0 32px;
     display: flex;
     justify-content: center;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 .middle-container{
+    padding-top: 75px;
+    margin-bottom: 15px;
     width: 500px;
 }
 .story-reels{
@@ -408,7 +412,7 @@ main {
     border-radius: 50%;
     left: 12px;
     overflow: hidden;
-    z-index: 200;
+    z-index: 10;
     border: 4px solid #297be5;
 }
 .story-avatar img{
@@ -491,9 +495,193 @@ main {
     color: #65676B;
     font-weight: 600;
 }
+.post{
+    background-color: #ffffff;
+    border-radius: 5px;
+    margin-top: 15px;
+}
+.post-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 16px 0;
+}
+.post-info{
+    display: flex;
+}
 
+.poster-info{
+    padding-left: 8px;
+}
+.poster-info span{
+    font-size: 15px;
+    color: #65676B;
+}
+.poster-info span a{
+    color: black;
+    font-weight: 500;
+    font-size: 16px;
+}
+.poster-info span a:hover{
+    text-decoration: underline;
+}
+.poster-info a{
+    display: inline-block;
+    font-size: 13px;
+    color: #65676B;
+}
+.poster-info a:hover{
+    text-decoration: underline;
+}
+.poster-info .dot{
+    padding-left: 3px;
+    display: inline-block;
+    transform: translateY(-3px);
+}
+.poster-info svg{
+    color: #65676B;
+    font-size: 12px;
+}
+.post-control{
+    display: flex;
+    align-items: center;
+}
+.control-icon{
+    width: 36px;
+    height: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.control-icon:hover{
+    background-color: #f2f2f2;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.post-body{
+    padding-top: 5px;
+}
+.post-text{
+    padding: 0 16px 8px 16px;
+}
+.post-img{
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid #e5e5e5;
+    position: relative;
+}
+.post-img-cover{
+    flex-grow: 1;
+}
+.post-img-over{
+    flex-basis: 225px;
+}
+.post-img img{
+    width: 100%;
+}
+.img-over-box{
+    width: 388px;
+    height: 388px;
+    border-radius: 50%;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-200px, -190px);
+}
+.img-over-box img{
+    width: 98%;
+    height: 98%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+.post-footer{
+    margin: 0 16px;
+}
+.counter{
+    padding: 6px 0;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #e5e5e5;
+}
+.reacts-img{
+    display: flex;
+    align-items: center;
+}
+.reacts-img img{
+    width: 18px;
+    height: 18px;
+    object-fit: cover;
+    cursor: pointer;
+}
+.reacts-img span{
+    padding-left: 6px;
+    font-size: 15px;
+    color: #65676B;
+}
+.reacts-img span:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+.comment-share{
+    display: flex;
+    align-items: center;
+}
+.counts-coms{
+    display: flex;
+    align-items: center;
+    padding: 6px;
+    gap: 5px;
+}
+.counts-coms:hover{
+    cursor: pointer;
+}
+.counts-coms:hover > span{
+    text-decoration: underline;
+}
+.counts-coms span{
+    font-size: 15px;
+    color: #65676B;
+}
+.counts-coms img{
+    width: 16px;
+    height: 16px;
+}
+.interaction{
+    display: flex;
+    justify-content: center;
+    padding: 4px;
+}
+.interact-box{
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    padding: 8px 45px;
+}
+.interact-box:hover{
+    background-color: #f2f2f2;
+    border-radius: 3px;
+}
+.interact-box img{
+    width: 18px;
+    height: 18px;
+    object-fit: cover;
+}
+.interact-box span{
+    font-size: 15px;
+    color: #65676B;
+    font-weight: 600;
+    cursor: pointer;
+}
 
-
+/* Right side style
+===================================
+===================================
+*/
 .right-side{
     padding-top: 70px;
     overflow: hidden;
