--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -98,3 +98,41 @@
         display: flex;
     }
   }
+
+  @media (max-width: 360px){
+    .middle-section{
+        width: 360px;
+        display: flex;
+        justify-content: center;
+        padding: 0 0px 0px 5px;
+    }
+    .middle-container{
+        width: 98%;
+    }
+    .writing-tool{
+        padding: 8px 8px;
+    }
+    .post-img{
+        height: 320px;
+    }
+    .post-height{
+        height: auto;
+    }
+    .post-img-over{
+        flex-basis: 160px;
+    }
+    .img-over-box{
+        width: 280px;
+        height: 280px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-143px, -139px);
+    }
+    .interact-box{
+        padding: 8px 20px;
+    }
+  }
