--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -97,6 +97,42 @@
     .writing-tools-wrapper{
         display: flex;
     }
+    .writing-tool{
+        padding: 8px 8px;
+    }
+    .post-img{
+        height: 320px;
+    }
+    .post-height{
+        height: auto;
+    }
+    .post-img-over{
+        flex-basis: 160px;
+    }
+    .img-over-box{
+        width: 280px;
+        height: 280px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-143px, -139px);
+    }
+    .counts-coms span{
+        font-size: 13px;
+    }
+    .counts-coms img{
+        width: 13px;
+        height: 13px;
+    }
+    .reacts-img span{
+        font-size: 13px;
+    }
+    .interact-box{
+        padding: 8px 20px;
+    }
   }
 
   @media (max-width: 360px){
