--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,7 +245,11 @@ main {
     transform: translateY(1px);
 }
 
-
+/*
+----------------------
+Middle Section Styling
+-----------------------
+*/
 
 
 .middle-section{
@@ -314,6 +318,23 @@ main {
 .stories{
     padding: 8px 0;
     overflow: hidden;
+    position: relative;
+}
+.stories-navigation{
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#ffffff;
+}
+.stories-navigation:hover{
+    cursor: pointer;
 }
 .stories-wrapper{
     width: 1000px;
@@ -322,7 +343,6 @@ main {
     padding-bottom: 8px;
     display: flex;
     gap: 9px;
-
 }
 
 .story{
@@ -796,14 +816,41 @@ main {
     height: 28px;
     border-radius: 50%;
     object-fit: cover;
+    position: relative;
 }
 .active-img img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
-
-
+.online-indicator .online{
+    width: 7px;
+    height: 7px;
+    background-color: #31A24C;
+    z-index: 20;
+    position: absolute;
+    bottom: 1px;
+    right: 1px;
+    border-radius: 3px;
+}
+.online-indicator .last-online{
+    background-color: #DEEFE1;
+    width: 22px;
+    height: 10px;
+    z-index: 20;
+    position: absolute;
+    bottom: 1px;
+    right: -2px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
+.online-indicator span{
+    color:#31A24C;
+    font-size: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
 
 
@@ -821,7 +868,7 @@ main {
   /* Handle */
   ::-webkit-scrollbar-thumb {
     display: none;
-    background: #888;
+    background: #BCC0C4;
     border-radius: 25px;
   }
   .left-side:hover::-webkit-scrollbar-thumb{
